--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -27,3 +27,4 @@ $image-dir: '../img/';
 @import 'components/MutedTweetList';
 @import 'components/LoadingImg';
 @import 'components/FatalMessage';
+@import 'components/ToggleMuterMenuButton';
