--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -14,3 +14,8 @@ $mute-button-color: #FF5B62;
 $show-button-color: #AAF9EE;
 $hide-button-color: #FF91AB;
 $twitter-blue: #58C6E8;
+
+
+//number
+$menu-animation-distance: 220px;
+$muter-menu-width: 300px;
