--- a/resources/sass/components/MutedTweet.scss
+++ b/resources/sass/components/MutedTweet.scss
@@ -5,6 +5,10 @@
   white-space: pre-line;
 }
 
+.muted-tweet-text {
+  max-width: 1200px;
+}
+
 .tweet-media-container {
   display: flex;
   flex-wrap: wrap;
@@ -75,7 +79,6 @@
   .muted-tweet {
     font-size: 1.25rem;
     line-height: 1.8rem;
-    max-width: 1000px;
     padding: 50px 100px 15px 250px;
   }
 
