--- a/resources/sass/common/_variables.scss
+++ b/resources/sass/common/_variables.scss
@@ -15,6 +15,14 @@ $show-button-color: #AAF9EE;
 $hide-button-color: #FF91AB;
 $twitter-blue: #58C6E8;
 
+//font-weight
+$fw-bold: 700;
+$fw-medium: 500;
+$fw-normal: 400;
+$fw-light: 300;
+
+//font-family
+$eng-head-font: 'brush-script-std', sans-serif;
 
 //number
 $menu-animation-distance: 220px;
