20190905 SP版トップページコーディング　終了
-SNSリンク追加
-フッター追加
-topのテスト用ログインリンクを削除

--- a/resources/sass/LoginPage/login_index.scss
+++ b/resources/sass/LoginPage/login_index.scss
@@ -45,3 +45,5 @@ $slick-loader-path: '../img/slick/';
 @import './components/PageHeader';
 @import './components/LoginContainer';
 @import './components/Carousel';
+@import './components/snsAdSection';
+@import './components/PageFooter';
