--- a/resources/sass/common/_variables.scss
+++ b/resources/sass/common/_variables.scss
@@ -2,6 +2,7 @@
 // // Colors
 $basic-white: #ffffff;
 $basic-label-color: #5D5D5D;
+$light-label-color: #7A7A7A;
 $basic-gray: #ececec;
 $dark-gray: #bcbcbc;
 $icon-gray: #6E6E6E;
@@ -16,6 +17,8 @@ $show-button-color: #AAF9EE;
 $hide-button-color: #FF91AB;
 $twitter-blue: #58C6E8;
 $twitter-shadow-blue: #3D89A7;
+$facebook-blue: #7EA7E5;
+
 
 //font-weight
 $fw-bold: 700;
