--- a/public/css/login_index.css
+++ b/public/css/login_index.css
@@ -448,4 +448,126 @@ body {
   background-color: #ffffff;
   opacity: 1;
 }
+
+.snsAdSection {
+  padding: 150px 0;
+  text-align: center;
+}
+.snsAdSection__head {
+  color: #58C6E8;
+  font-size: 1.625rem;
+  font-weight: bold;
+}
+.snsAdSection__paragraph {
+  color: #7A7A7A;
+  font-size: 1.125rem;
+  line-height: 2.5;
+  white-space: pre-wrap;
+}
+.snsAdSection__paragraph--first {
+  margin-top: 30px;
+}
+.snsAdSection__paragraph--second {
+  margin-top: 45px;
+}
+.snsAdSection__paragraph--third {
+  margin-top: 45px;
+}
+.snsAdSection__SNSList {
+  margin-top: 50px;
+}
+.snsAdSection .twitter-share-button {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background-color: transparent;
+  border: 0;
+  padding: 0;
+  border-radius: 5px;
+  color: #ffffff;
+  display: block;
+  font-size: 1.25rem;
+  font-weight: bold;
+  height: 50px;
+  margin: 40px auto 0;
+  width: 180px;
+  background-color: #58C6E8;
+}
+.snsAdSection .twitter-share-button:focus {
+  outline: 0;
+}
+.snsAdSection .line-share-button {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background-color: transparent;
+  border: 0;
+  padding: 0;
+  border-radius: 5px;
+  color: #ffffff;
+  display: block;
+  font-size: 1.25rem;
+  font-weight: bold;
+  height: 50px;
+  margin: 40px auto 0;
+  width: 180px;
+  background-color: #86F3B0;
+}
+.snsAdSection .line-share-button:focus {
+  outline: 0;
+}
+.snsAdSection .facebook-share-button {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background-color: transparent;
+  border: 0;
+  padding: 0;
+  border-radius: 5px;
+  color: #ffffff;
+  display: block;
+  font-size: 1.25rem;
+  font-weight: bold;
+  height: 50px;
+  margin: 40px auto 0;
+  width: 180px;
+  background-color: #7EA7E5;
+}
+.snsAdSection .facebook-share-button:focus {
+  outline: 0;
+}
+
+.pageFooterContainer {
+  background-color: #58C6E8;
+  color: #ffffff;
+  padding: 10px;
+  text-align: center;
+}
+.pageFooterContainer__head {
+  font-size: 1.125rem;
+}
+.pageFooterContainer__ownerName {
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-top: 10px;
+}
+.pageFooterContainer__linkList {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+.pageFooterContainer__link {
+  margin: 0 12px;
+}
+.pageFooterContainer__homeIcon {
+  width: 26px;
+}
+.pageFooterContainer__twitterIcon {
+  width: 26px;
+}
+.pageFooterContainer__copyRight {
+  font-size: 12px;
+  margin-top: 40px;
+}
 /*# sourceMappingURL=login_index.css.map*/
