--- a/resources/sass/LoginPage/login_index.scss
+++ b/resources/sass/LoginPage/login_index.scss
@@ -43,7 +43,8 @@ $slick-loader-path: '../img/slick/';
 @import '../common/mixin';
 @import './components/loginPage';
 @import './components/PageHeader';
-@import './components/LoginContainer';
+@import './components/LoginSection';
+@import './components/ReadMore';
 @import './components/Carousel';
 @import './components/snsAdSection';
 @import './components/PageFooter';
