--- a/resources/sass/common/_variables.scss
+++ b/resources/sass/common/_variables.scss
@@ -32,3 +32,5 @@ $eng-head-font: 'brush-script-std', sans-serif;
 //number
 $menu-animation-distance: 220px;
 $muter-menu-width: 300px;
+$pc-header-height: 280px;
+$pc-readmore-height: 100px;
