--- a/resources/sass/LoginPage/components/PageFooter.scss
+++ b/resources/sass/LoginPage/components/PageFooter.scss
@@ -4,6 +4,13 @@
   padding: 10px;
   text-align: center;
 
+  &__copyRight {
+    font-size: 12px;
+    margin-top: 40px;
+  }
+}
+
+.footerOwnerInfo {
   &__head {
     font-size: 1.125rem;
   }
@@ -32,9 +39,47 @@
   &__twitterIcon {
     width: 26px;
   }
+}
 
-  &__copyRight {
-    font-size: 12px;
-    margin-top: 40px;
+@include media-forPC {
+  .pageFooterContainer {
+    height: 150px;
+    padding: 75px 0 8px;
+    text-align: right;
+
+    &__wrapper {
+      margin: 0 auto;
+      max-width: 1220px;
+      padding-right: 20px;
+    }
+
+    &__copyRight {
+      font-size: 1.25rem;
+      margin-top: 8px;
+    }
+  }
+
+  .footerOwnerInfo {
+    align-items: flex-end;
+    display: flex;
+    justify-content: flex-end;
+
+    &__head {
+      font-size: 1.375rem;
+      margin-right: 25px;
+    }
+
+    &__ownerName {
+      font-size: 1.375rem;
+      margin-top: 0;
+    }
+
+    &__linkList {
+      margin-top: 0;
+    }
+
+    &__link {
+      margin: 0 0 0 15px;
+    }
   }
 }
