--- a/resources/sass/common/mixin.scss
+++ b/resources/sass/common/mixin.scss
@@ -5,6 +5,12 @@
   }
 }
 
+@mixin media-forTablet {
+  @media screen and (min-width: 768px) and (max-width: 1024px) {
+    @content;
+  }
+}
+
 // ボタンタグリセット
 @mixin reset-button {
   appearance: none;
