--- a/resources/sass/LoginPage/components/LoginSection.scss
+++ b/resources/sass/LoginPage/components/LoginSection.scss
@@ -91,6 +91,7 @@
     align-items: center;
     display: flex;
     justify-content: center;
+    min-height: 400px;
     height: calc(100vh - #{$pc-header-height} - #{$pc-readmore-height});
 
     &__head {
