--- a/resources/sass/LoginPage/components/SNSAdSection.scss
+++ b/resources/sass/LoginPage/components/SNSAdSection.scss
@@ -35,6 +35,7 @@
     @include reset-button;
     border-radius: 5px;
     color: $basic-white;
+    cursor: pointer;
     display: block;
     font-size: 1.25rem;
     font-weight: bold;
