--- a/public/css/login_index.css
+++ b/public/css/login_index.css
@@ -335,8 +335,8 @@ body {
   max-width: 350px;
 }
 .pageHeadContainer__headLine2 {
-  margin-left: 40%;
   margin-top: 17px;
+  text-align: right;
 }
 .pageHeadContainer__engHead {
   font-family: "brush-script-std", sans-serif;
@@ -454,6 +454,7 @@ body {
     align-items: center;
     display: flex;
     justify-content: center;
+    min-height: 400px;
     height: calc(100vh - 280px - 100px);
   }
   .LoginSection__head {
@@ -535,6 +536,7 @@ body {
   width: 120%;
 }
 .loginCarousel__slideImg {
+  max-height: 90vh;
   width: 100vw;
 }
 
@@ -568,13 +570,13 @@ body {
 @media screen and (min-width: 768px) {
   .loginCarousel {
     margin: 0 auto;
-    max-width: 1400px;
-    width: 90%;
+    width: 1400px;
+    max-width: 95%;
   }
   .loginCarousel__slideImg {
     margin: 0 auto;
     max-width: 1200px;
-    width: 90%;
+    width: auto;
   }
 
   .slickArrows {
@@ -583,11 +585,12 @@ body {
     justify-content: space-between;
     left: 50%;
     margin: 0 auto;
-    max-width: 1500px;
+    width: 1400px;
     position: absolute;
     top: 45%;
     transform: translate(-50%, -50%);
-    width: 95%;
+    max-width: 90%;
+    min-width: 1000px;
   }
   .slickArrows__prevArrow, .slickArrows__nextArrow {
     -webkit-appearance: none;
@@ -596,9 +599,13 @@ body {
     background-color: transparent;
     border: 0;
     padding: 0;
+    cursor: pointer;
   }
   .slickArrows__prevArrow:focus, .slickArrows__nextArrow:focus {
     outline: 0;
+  }
+  .slickArrows img {
+    max-width: 50px;
   }
 
   .slick-dots {
@@ -606,6 +613,10 @@ body {
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1024px) {
+  .loginCarousel__slideImg {
+    max-width: 90%;
+  }
+
   .slickArrows {
     display: none;
   }
@@ -650,6 +661,7 @@ body {
   padding: 0;
   border-radius: 5px;
   color: #ffffff;
+  cursor: pointer;
   display: block;
   font-size: 1.25rem;
   font-weight: bold;
@@ -681,6 +693,7 @@ body {
   padding: 0;
   border-radius: 5px;
   color: #ffffff;
+  cursor: pointer;
   display: block;
   font-size: 1.25rem;
   font-weight: bold;
@@ -712,6 +725,7 @@ body {
   padding: 0;
   border-radius: 5px;
   color: #ffffff;
+  cursor: pointer;
   display: block;
   font-size: 1.25rem;
   font-weight: bold;
