--- a/resources/sass/TwApps/components/ToggleMuterMenuButton.scss
+++ b/resources/sass/TwApps/components/ToggleMuterMenuButton.scss
@@ -5,7 +5,7 @@
 
 
 
-@include media-forPC {
+@include media-forNotMobile {
   .menu-button-container {
     display: block;
     text-align: right;
