--- a/public/css/muter_index.css
+++ b/public/css/muter_index.css
@@ -727,10 +727,46 @@ body {
   display: flex;
   height: 100vh;
   justify-content: center;
+  flex-wrap: wrap;
+}
+
+.fatal-message-content {
+  text-align: center;
 }
 
 .fatal-message {
   white-space: pre-wrap;
+  color: #7A7A7A;
+  font-weight: bold;
+  line-height: 2;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .fatal-message {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+}
+
+.fatalLink {
+  color: inherit;
+  text-decoration: none;
+  border-radius: 5px;
+  display: flex;
+  margin: 30px auto 0;
+  width: 50%;
+  height: 40px;
+  background-color: #58C6E8;
+  color: #ffffff;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 5px #3D89A7;
+  transition: 0.3s;
+  font-weight: bold;
+}
+.fatalLink:active {
+  transform: translateY(5px);
+  box-shadow: 0 0 #3D89A7;
 }
 
 .menu-button-container {
