20190930 fontsのパスが修正前が正しかったので戻し
-fontsのパスを戻し

--- a/resources/sass/LoginPage/login_index.scss
+++ b/resources/sass/LoginPage/login_index.scss
@@ -10,21 +10,21 @@
   font-display: replace;
   font-family: 'Noto Sans';
   font-weight: 700;
-  src: url('../../fonts/NotoSans_bold.woff');
+  src: url('../fonts/NotoSans_bold.woff');
 }
 
 @font-face {
   font-display: replace;
   font-family: 'Noto Sans';
   font-weight: 500;
-  src: url('../../fonts/NotoSans_medium.woff');
+  src: url('../fonts/NotoSans_medium.woff');
 }
 
 @font-face {
   font-display: replace;
   font-family: 'Noto Sans';
   font-weight: 400;
-  src: url('../../fonts/NotoSans_regular.woff');
+  src: url('../fonts/NotoSans_regular.woff');
 }
 
 body {
