ファーストビューまでstyled-component化
- LoginSection, ReadMoreまでリファクタリング

--- a/resources/sass/LoginPage/login_index.scss
+++ b/resources/sass/LoginPage/login_index.scss
@@ -42,9 +42,9 @@ $slick-loader-path: '../img/slick/';
 
 @import '../common/mixin';
 @import './components/loginPage';
-@import './components/PageHeader';
-@import './components/LoginSection';
-@import './components/ReadMore';
+// @import './components/PageHeader';
+// @import './components/LoginSection';
+// @import './components/ReadMore';
 @import './components/Carousel';
 @import './components/snsAdSection';
 @import './components/PageFooter';
