--- a/resources/sass/LoginPage/components/Carousel.scss
+++ b/resources/sass/LoginPage/components/Carousel.scss
@@ -1,18 +1,8 @@
-.carouselContainer {
-  background-color: $muter-green;
-  padding: 50px 0 120px;
-  position: relative;
-}
-
-.loginCarousel {
-  // スライドより大きい値に設定するとその幅がスライド間の余白になる
-  width: 120%;
-
-  &__slideImg {
-    max-height: 90vh;
-    width: 100vw;
-  }
-}
+//==============================================
+// カルーセルスタイル
+// 基本はstyled-componentsでスタイリングする
+// slickを使うのでclass名を設定する必要があるもののスタイル
+//==============================================
 
 //==============================================
 // slick-carouselのスタイル上書き
@@ -41,45 +31,6 @@
   opacity: 1;
 }
 
-.slickArrows {
-  display: none;
-}
-
-@include media-forPC {
-  .loginCarousel {
-    margin: 0 auto;
-    width: 1400px;
-    max-width: 95%;
-
-    &__slideImg {
-      margin: 0 auto;
-      max-width: 1200px;
-      width: auto;
-    }
-  }
-
-  .slickArrows {
-    cursor: pointer;
-    display: flex;
-    justify-content: space-between;
-    left: 50%;
-    margin: 0 auto;
-    width: 1400px;
-    position: absolute;
-    top: 45%;
-    transform: translate(-50%, -50%);
-    max-width: 90%;
-    min-width: 1000px;
-
-    &__prevArrow, &__nextArrow {
-      @include reset-button;
-      cursor: pointer;
-    }
-
-    img {
-      max-width: 50px;
-    }
-  }
 
   .slick-dots {
     // 携帯版のみ親要素がw120となり特別
@@ -90,15 +41,6 @@
 
 
 @include media-forTablet {
-  .loginCarousel {
-    &__slideImg {
-      max-width: 90%;
-    }
-  }
-  .slickArrows {
-    display: none;
-  }
-
   .slick-dots {
     // 携帯版のみ親要素がw120となり特別
     // それ以外では元の記述に戻す
