--- a/public/css/muter_index.css
+++ b/public/css/muter_index.css
@@ -63,12 +63,15 @@ body {
 }
 
 .twapps-header {
-  align-items: center;
+  -webkit-box-align: center;
+          align-items: center;
   background-color: #ececec;
   border-bottom: #bcbcbc 1px solid;
+  display: -webkit-box;
   display: flex;
   height: 50px;
-  justify-content: flex-end;
+  -webkit-box-pack: end;
+          justify-content: flex-end;
   padding: 5px;
   position: fixed;
   top: 0;
@@ -84,9 +87,11 @@ body {
 .muter-menu {
   background-color: #ececec;
   bottom: 0;
+  display: -webkit-box;
   display: flex;
   height: 50px;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+          justify-content: space-between;
   padding: 0 50px;
   position: fixed;
   width: 100%;
@@ -267,9 +272,12 @@ body {
 }
 
 .muted-top-container {
-  align-items: center;
+  -webkit-box-align: center;
+          align-items: center;
+  display: -webkit-box;
   display: flex;
   height: 95px;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 
@@ -285,12 +293,17 @@ body {
 }
 
 .muted-username-container {
-  align-items: flex-start;
+  -webkit-box-align: start;
+          align-items: flex-start;
+  display: -webkit-box;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
   font-weight: bold;
   height: 100%;
-  justify-content: center;
+  -webkit-box-pack: center;
+          justify-content: center;
   max-width: 70%;
   padding-top: 8px;
 }
@@ -301,6 +314,7 @@ body {
 }
 
 .muted-bottom-container {
+  display: -webkit-box;
   display: flex;
 }
 
@@ -335,9 +349,11 @@ body {
   padding: 0;
   background-color: #AAF9CC;
   color: #00535D;
+  display: -webkit-box;
   display: flex;
   height: 30px;
-  justify-content: center;
+  -webkit-box-pack: center;
+          justify-content: center;
   white-space: nowrap;
   width: 50%;
 }
@@ -354,9 +370,11 @@ body {
   padding: 0;
   background-color: #FF5B62;
   color: #00535D;
+  display: -webkit-box;
   display: flex;
   height: 30px;
-  justify-content: center;
+  -webkit-box-pack: center;
+          justify-content: center;
   white-space: nowrap;
   width: 50%;
   color: #ffffff;
@@ -421,10 +439,12 @@ body {
     background-color: transparent;
     border: 0;
     padding: 0;
-    align-items: center;
+    -webkit-box-align: center;
+            align-items: center;
     background-color: #AAF9CC;
     color: #00535D;
     cursor: pointer;
+    display: -webkit-box;
     display: flex;
     font-size: 1.25rem;
     height: 50px;
@@ -444,10 +464,12 @@ body {
     background-color: transparent;
     border: 0;
     padding: 0;
-    align-items: center;
+    -webkit-box-align: center;
+            align-items: center;
     background-color: #FF5B62;
     color: #ffffff;
     cursor: pointer;
+    display: -webkit-box;
     display: flex;
     font-size: 1.25rem;
     height: 50px;
@@ -469,9 +491,11 @@ body {
   padding: 0;
   background-color: #AAF9EE;
   color: #00535D;
+  display: -webkit-box;
   display: flex;
   height: 30px;
-  justify-content: center;
+  -webkit-box-pack: center;
+          justify-content: center;
   white-space: nowrap;
   width: 50%;
 }
@@ -496,9 +520,11 @@ body {
   padding: 0;
   background-color: #FF91AB;
   color: #00535D;
+  display: -webkit-box;
   display: flex;
   height: 30px;
-  justify-content: center;
+  -webkit-box-pack: center;
+          justify-content: center;
   white-space: nowrap;
   width: 50%;
 }
@@ -527,7 +553,8 @@ body {
     cursor: pointer;
     font-size: 1.25rem;
     height: 50px;
-    justify-content: flex-start;
+    -webkit-box-pack: start;
+            justify-content: flex-start;
     padding-left: 680px;
     white-space: nowrap;
     width: 100%;
@@ -537,7 +564,8 @@ body {
     cursor: pointer;
     font-size: 1.25rem;
     height: 50px;
-    justify-content: flex-start;
+    -webkit-box-pack: start;
+            justify-content: flex-start;
     padding-left: 680px;
     white-space: nowrap;
     width: 100%;
@@ -568,6 +596,7 @@ body {
 }
 
 .tweet-media-container {
+  display: -webkit-box;
   display: flex;
   flex-wrap: wrap;
   margin: 20px auto;
@@ -577,9 +606,12 @@ body {
 }
 
 .tweet-media-item {
-  align-items: center;
+  -webkit-box-align: center;
+          align-items: center;
+  display: -webkit-box;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+          justify-content: center;
   max-height: 60px;
   max-width: 120px;
   overflow: hidden;
@@ -590,13 +622,17 @@ body {
 }
 
 .tweet-info-container {
-  align-items: center;
+  -webkit-box-align: center;
+          align-items: center;
+  display: -webkit-box;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+          justify-content: space-between;
   padding: 15px 30px 0;
 }
 
 .tweet-count-info {
+  display: -webkit-box;
   display: flex;
 }
 
@@ -649,7 +685,8 @@ body {
   }
 
   .tweet-info-container {
-    justify-content: flex-start;
+    -webkit-box-pack: start;
+            justify-content: flex-start;
     padding: 0;
   }
 
@@ -661,10 +698,12 @@ body {
   .open-twitter-link {
     color: inherit;
     text-decoration: none;
-    align-items: center;
+    -webkit-box-align: center;
+            align-items: center;
     background-color: #58C6E8;
     border-radius: 5px;
     color: #ffffff;
+    display: -webkit-box;
     display: flex;
     font-size: 1rem;
     height: 25px;
@@ -685,6 +724,7 @@ body {
 }
 .muted-tweet-list {
   overflow: hidden;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 
@@ -699,13 +739,16 @@ body {
 }
 
 .loading-img-container {
-  align-items: center;
+  -webkit-box-align: center;
+          align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 5px;
+  display: -webkit-box;
   display: flex;
   flex-wrap: wrap;
   height: 80px;
-  justify-content: center;
+  -webkit-box-pack: center;
+          justify-content: center;
   left: calc(50% - 35px);
   position: fixed;
   top: 50%;
@@ -723,10 +766,13 @@ body {
 }
 
 .fatal-message-container {
-  align-items: center;
+  -webkit-box-align: center;
+          align-items: center;
+  display: -webkit-box;
   display: flex;
   height: 100vh;
-  justify-content: center;
+  -webkit-box-pack: center;
+          justify-content: center;
   flex-wrap: wrap;
 }
 
@@ -752,20 +798,25 @@ body {
   color: inherit;
   text-decoration: none;
   border-radius: 5px;
+  display: -webkit-box;
   display: flex;
   margin: 30px auto 0;
   width: 50%;
   height: 40px;
   background-color: #58C6E8;
   color: #ffffff;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+          justify-content: center;
   box-shadow: 0px 5px #3D89A7;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
   font-weight: bold;
 }
 .fatalLink:active {
-  transform: translateY(5px);
+  -webkit-transform: translateY(5px);
+          transform: translateY(5px);
   box-shadow: 0 0 #3D89A7;
 }
 
