--- a/server/resources/sass/TwApps/components/MutedUserInfo.scss
+++ b/server/resources/sass/TwApps/components/MutedUserInfo.scss
@@ -1,66 +1,66 @@
 
-.muted-user-info {
-  list-style: none;
-  width: 100%;
-}
+// .muted-user-info {
+//   list-style: none;
+//   width: 100%;
+// }
 
-.muted-top-container {
-  align-items: center;
-  display: flex;
-  height: 95px;
-  transition: .5s;
-}
+// .muted-top-container {
+//   align-items: center;
+//   display: flex;
+//   height: 95px;
+//   transition: .5s;
+// }
 
-.unmuted-user-bg {
-  background-color: $unmuted-user-bg;
-}
+// .unmuted-user-bg {
+//   background-color: $unmuted-user-bg;
+// }
 
-.muted-user-icon {
-  border-radius: 50%;
-  height: 70px;
-  margin: 0 40px 0 10px;
-  width: 70px;
-}
+// .muted-user-icon {
+//   border-radius: 50%;
+//   height: 70px;
+//   margin: 0 40px 0 10px;
+//   width: 70px;
+// }
 
-.muted-username-container {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: column;
-  font-weight: bold;
-  height: 100%;
-  justify-content: center;
-  max-width: 70%;
-  padding-top: 8px;
-}
+// .muted-username-container {
+//   align-items: flex-start;
+//   display: flex;
+//   flex-direction: column;
+//   font-weight: bold;
+//   height: 100%;
+//   justify-content: center;
+//   max-width: 70%;
+//   padding-top: 8px;
+// }
 
-.muted-user-name {
-  font-size: 18px;
-  margin-bottom: 5px;
-}
+// .muted-user-name {
+//   font-size: 18px;
+//   margin-bottom: 5px;
+// }
 
-.muted-bottom-container {
-  display: flex;
-}
+// .muted-bottom-container {
+//   display: flex;
+// }
 
 @include media-forNotMobile {
-  .muted-top-container {
-    height: 190px;
-  }
+  // .muted-top-container {
+  //   height: 190px;
+  // }
 
-  .muted-user-icon {
-    height: 140px;
-    width: 140px;
-    margin: 0 70px 0 40px;
-  }
+  // .muted-user-icon {
+  //   height: 140px;
+  //   width: 140px;
+  //   margin: 0 70px 0 40px;
+  // }
 
-  .muted-user-name {
-    font-size: 1.5rem;
-    margin-bottom: 17px;
-    line-height: 1.9rem;
-    padding-right: 30px;
-  }
+  // .muted-user-name {
+  //   font-size: 1.5rem;
+  //   margin-bottom: 17px;
+  //   line-height: 1.9rem;
+  //   padding-right: 30px;
+  // }
 
-  .muted-username-container {
-    width: 420px;
-  }
+  // .muted-username-container {
+  //   width: 420px;
+  // }
 }
