--- a/server/resources/sass/common/mixin.scss
+++ b/server/resources/sass/common/mixin.scss
@@ -36,57 +36,57 @@
 }
 
 //携帯用の隠す、チラ見、ミュート、ミュート解除アイコン
-@mixin div-icon($icon-url) {
-  background: url($icon-url) center center / contain no-repeat;
-  flex-shrink: 0;
-  height: 18px;
-  margin-right: 3px;
-  width: 25px;
-}
+// @mixin div-icon($icon-url) {
+//   background: url($icon-url) center center / contain no-repeat;
+//   flex-shrink: 0;
+//   height: 18px;
+//   margin-right: 3px;
+//   width: 25px;
+// }
 
-@mixin pc-div-icon($icon-url) {
-  background: url($icon-url) center center / contain no-repeat;
-  height: 25px;
-  margin-right: 5px;
-  width: 35px;
-}
+// @mixin pc-div-icon($icon-url) {
+//   background: url($icon-url) center center / contain no-repeat;
+//   height: 25px;
+//   margin-right: 5px;
+//   width: 35px;
+// }
 
 //携帯用の隠す、チラ見、ミュート、ミュート解除ボタン
-@mixin mobile-mute-button($bg-color) {
-  @include reset-button;
-  background-color: $bg-color;
-  color: $button-label-color;
-  display: flex;
-  height: 30px;
-  justify-content: center;
-  white-space: nowrap;
-  width: 50%;
-}
+// @mixin mobile-mute-button($bg-color) {
+//   @include reset-button;
+//   background-color: $bg-color;
+//   color: $button-label-color;
+//   display: flex;
+//   height: 30px;
+//   justify-content: center;
+//   white-space: nowrap;
+//   width: 50%;
+// }
 
 //mediaクエリの中で使用するPC用のチラ見ボタン用スタイル
-@mixin pc-show-button {
-  cursor: pointer;
-  font-size: 1.25rem;
-  height: 50px;
-  justify-content: flex-start;
-  //アイコン250px + 名前コンテナ420px + ミュートボタンのpaddingLeft15px - 微調整5px
-  padding-left: 680px;
-  white-space: nowrap;
-  width: 100%;
-}
+// @mixin pc-show-button {
+//   cursor: pointer;
+//   font-size: 1.25rem;
+//   height: 50px;
+//   justify-content: flex-start;
+//   //アイコン250px + 名前コンテナ420px + ミュートボタンのpaddingLeft15px - 微調整5px
+//   padding-left: 680px;
+//   white-space: nowrap;
+//   width: 100%;
+// }
 
-//PC用のミュート解除、ミュートボタン
-@mixin pc-mute-button($bg-color, $label-color) {
-  @include reset-button;
-  align-items: center;
-  background-color: $bg-color;
-  color: $label-color;
-  cursor: pointer;
-  display: flex;
-  font-size: 1.25rem;
-  height: 50px;
-  padding-left: 15px;
-  padding-top: 5px;
-  white-space: nowrap;
-  width: 200px;
-}
+// //PC用のミュート解除、ミュートボタン
+// @mixin pc-mute-button($bg-color, $label-color) {
+//   @include reset-button;
+//   align-items: center;
+//   background-color: $bg-color;
+//   color: $label-color;
+//   cursor: pointer;
+//   display: flex;
+//   font-size: 1.25rem;
+//   height: 50px;
+//   padding-left: 15px;
+//   padding-top: 5px;
+//   white-space: nowrap;
+//   width: 200px;
+// }
